# custom-voxel-engine-cpp

./: CMakeLists.txt  LICENSE
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
res/shaders/: main.fs  main.vs
src/: main.cpp
src/graphics/: Mesh.cpp  Mesh.hpp  NoiseGenerator.cpp  NoiseGenerator.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/utils/: Logger.cpp  Logger.hpp
src/voxels/: Chunk.cpp  Chunk.hpp  ChunkManager.hpp
src/window/: Camera.cpp  Camera.hpp  Events.cpp  Events.hpp  Window.cpp  Window.hpp
